--- a/recipes/templates/recipes/navbar.html
+++ b/recipes/templates/recipes/navbar.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <nav class="navbar navbar-expand-lg shadow-sm" style="background-color: #fff0e6; border-bottom: 2px solid #ffb997;">
   <div class="container">
     <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem; color: #d35400;">DishDiary</a>
