--- a/recipes/templates/recipes/create_recipe.html
+++ b/recipes/templates/recipes/create_recipe.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Add your own recipe to Dish Diary. Share your culinary creations with fellow food lovers." />
+
     <title>Create Recipe - DishDiary</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
