--- a/recipes/templates/recipes/search_results.html
+++ b/recipes/templates/recipes/search_results.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Explore recipes on Dish Diary based on your search. Find meals that match your taste." />
+
     <title>Search Results | DishDiary</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
