--- a/recipes/templates/recipes/signup.html
+++ b/recipes/templates/recipes/signup.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Join Dish Diary and start your culinary journey. Create, save, and explore recipes." />
+
     <title>Sign Up | DishDiary</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
