Add aria-label to navbar toggler button for improved accessibility

--- a/recipes/templates/recipes/navbar.html
+++ b/recipes/templates/recipes/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg shadow-sm" style="background-color: #fff0e6; border-bottom: 2px solid #ffb997;">
   <div class="container">
     <a class="navbar-brand" href="/" style="font-weight: bold; font-size: 1.5rem; color: #d35400;">DishDiary</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
