improve styling to resolve accessibility issues

--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -83,7 +83,7 @@
   }
 
   .text-muted {
-    color: #5c5c5c !important;
+    color: #3e3e3e !important;
   }
 
   button:focus,
@@ -92,6 +92,16 @@
     outline: 2px solid #d35400;
     outline-offset: 2px;
   }
+  .btn-outline-secondary {
+  border-color: #3e3e3e;
+  color: #3e3e3e;
+}
+
+.btn-outline-secondary:hover {
+  background-color: #3e3e3e;
+  color: white;
+}
+
     </style>
   </head>
   <body>
