--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -32,7 +32,7 @@
         font-family: "Georgia", serif;
       }
       .hero {
-        background-image: url("https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=1600&q=80");
+        background-image: url("/static/heroimage.webp");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
