--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Welcome to Dish Diary — discover, create, and share your favorite recipes with the world." />
+<link rel="preload" as="image" href="/static/heroimage.webp" type="image/webp">
 
     <title>DishDiary</title>
     <link
@@ -210,6 +211,7 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+
   </body>
 </html>
