--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -55,20 +55,7 @@
         border-radius: 16px;
         background-color: #ffb997;
         border: none;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      {% comment %} }
-      .card-title {
-        color: #d35400;
-        font-weight: 600;
-      }
-      .btn-outline-danger {
-        border-color: #d35400;
-        color: #d35400;
-      }
-      .btn-outline-danger:hover {
-        background-color: #d35400;
-        color: white; {% endcomment %}
-      }
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);}
         .card-title {
     color: #a80000; /* darker red for better contrast */
   }
