--- a/recipes/templates/recipes/user_profile.html
+++ b/recipes/templates/recipes/user_profile.html
@@ -34,6 +34,16 @@
 
 <body>
   {% include 'recipes/navbar.html' %}
+{% if messages %}
+  <div class="container mt-3">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
 
   <div class="container mt-5">
     <div class="text-center mb-4">
